# darknyx-capstone-project

./: .gitignore  README.md  partial_fill_and_fee_notes.md  tsconfig.tsbuildinfo
apps/demo/: .env.local  ARCHITECTURE.md  README.md  next.config.ts  package-lock.json  package.json
apps/demo/.demo-keypairs/: maker.json  maker.pubkey  taker.json  taker.pubkey
apps/demo/design-system/: README.md  brand-guidelines.html
apps/demo/design-system/cli/: nyx-ascii.txt
apps/demo/design-system/favicon/: head-snippet.html  site.webmanifest
apps/demo/design-system/tokens/: tokens.css  tokens.json
apps/demo/public/circuits/valid_spend/: circuit.wasm
apps/demo/public/circuits/valid_wallet_create/: circuit.wasm  (+1 more)
apps/demo/src/app/: globals.css  layout.tsx  page.tsx
apps/demo/src/components/: live-er-submit-panel.tsx  onchain-inspector-panel.tsx  privacy-timeline-panel.tsx  withdraw-proof-panel.tsx
apps/demo/src/lib/: demo-scenario.ts  privacy-timeline.ts
apps/demo/src/types/: snarkjs.d.ts
apps/demo/src/workers/: prover.worker.ts
crates/darkpool-crypto/examples/: note-commitment.rs  nullifier.rs
docs/: ARCHITECTURE.md
programs/matching_engine/: Cargo.toml
programs/matching_engine/src/: errors.rs  lib.rs
programs/matching_engine/src/instructions/: cancel_order.rs  delegate_pending_order.rs  init_pending_order_slot.rs  mod.rs  run_batch.rs  submit_order.rs
programs/matching_engine/src/state/: mod.rs  pending_order.rs
programs/matching_engine/tests/: run_batch.rs  submit_order.rs
programs/matching_engine/tests/common/: mod.rs
scripts/: dev-commands.md
(+57 files in other folders)
